fix(main nav): button spacing

--- a/src/styles/components/_main-nav.scss
+++ b/src/styles/components/_main-nav.scss
@@ -70,13 +70,21 @@
       }
 
       .c-main-nav__button-bar {
+        --gap-button-bar: 1.8rem;
+
         flex-wrap: wrap;
         justify-content: center;
         row-gap: 1.5rem;
-        column-gap: 2rem;
+        column-gap: var(--gap-button-bar);
+
+        .c-main-nav__buttons {
+          --column-gap-buttons: var(--gap-button-bar);
+
+          display: flex;
+        }
 
         .c-searchbar {
-          flex: 1 0 min(100%, 300px);
+          flex: 1 0 min(100%, 250px);
         }
       }
     }
@@ -117,6 +125,16 @@
     grid-area: button-bar;
     display: flex;
     column-gap: 1rem;
+  }
+
+  &__buttons {
+    display: flex;
+    column-gap: var(--column-gap-buttons, 1rem);
+  }
+
+  &__rss-link {
+    padding-inline: 6px;
+    padding-block: 1px;
   }
 
   .c-searchbar {
